--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="header__icon-container__1">
         <ion-icon class="header__icon" name="help-circle-outline"></ion-icon>
       </div>
-      <h1 class="header__title">Nerdle Werdle</h1>
+      <h1 class="header__title">Wordle</h1>
       <div class="header__icon-container__2">
         <ion-icon class="header__icon" name="stats-chart-outline"></ion-icon>
         <ion-icon class="header__icon" name="settings-outline"></ion-icon>
@@ -93,7 +93,7 @@
         <button class="keyboard__button" value="L">L</button>
       </div>
       <div class="keyboard__row">
-        <button class="keyboard__button--enter" value="enter">Enter</button>
+        <button class="keyboard__button keyboard__button--enter" value="Enter">Enter</button>
         <button class="keyboard__button" value="Z">Z</button>
         <button class="keyboard__button" value="X">X</button>
         <button class="keyboard__button" value="C">C</button>
@@ -101,7 +101,7 @@
         <button class="keyboard__button" value="B">B</button>
         <button class="keyboard__button" value="N">N</button>
         <button class="keyboard__button" value="M">M</button>
-        <button class="keyboard__button--backspace" value="backspace">
+        <button class="keyboard__button keyboard__button--backspace" value="Backspace">
           <ion-icon class="backspace__icon" name="backspace-outline"></ion-icon>
         </button>
       </div>
