--- a/index.html
+++ b/index.html
@@ -26,46 +26,256 @@
   <section class="section">
     <div class="board">
       <div class="board__row board__row__1">
-        <div class="board__tile board__tile__1"></div>
-        <div class="board__tile board__tile__2"></div>
-        <div class="board__tile board__tile__3"></div>
-        <div class="board__tile board__tile__4"></div>
-        <div class="board__tile board__tile__5"></div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="board__row board__row__2 active">
-        <div class="board__tile board__tile__1"></div>
-        <div class="board__tile board__tile__2"></div>
-        <div class="board__tile board__tile__3"></div>
-        <div class="board__tile board__tile__4"></div>
-        <div class="board__tile board__tile__5"></div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="board__row board__row__3">
-        <div class="board__tile board__tile__1"></div>
-        <div class="board__tile board__tile__2"></div>
-        <div class="board__tile board__tile__3"></div>
-        <div class="board__tile board__tile__4"></div>
-        <div class="board__tile board__tile__5"></div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="board__row board__row__4">
-        <div class="board__tile board__tile__1"></div>
-        <div class="board__tile board__tile__2"></div>
-        <div class="board__tile board__tile__3"></div>
-        <div class="board__tile board__tile__4"></div>
-        <div class="board__tile board__tile__5"></div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="board__row board__row__5">
-        <div class="board__tile board__tile__1"></div>
-        <div class="board__tile board__tile__2"></div>
-        <div class="board__tile board__tile__3"></div>
-        <div class="board__tile board__tile__4"></div>
-        <div class="board__tile board__tile__5"></div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
       </div>
       <div class="board__row board__row__6">
-        <div class="board__tile board__tile__1"></div>
-        <div class="board__tile board__tile__2"></div>
-        <div class="board__tile board__tile__3"></div>
-        <div class="board__tile board__tile__4"></div>
-        <div class="board__tile board__tile__5"></div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
+        <div class="board__tile__container">
+          <div class="board__tile">
+            <div class="front">
+            </div>
+            <div class="back">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="keyboard">
