add end game feature

--- a/index.html
+++ b/index.html
@@ -10,313 +10,320 @@
 </head>
 
 <body>
-  <header>
-    <div class="header">
-      <div class="header__icon-container__1">
-        <ion-icon class="header__icon" name="help-circle-outline"></ion-icon>
+  <div>
+    <header>
+      <div class="header">
+        <div class="header__icon-container__1">
+          <ion-icon class="header__icon" name="help-circle-outline"></ion-icon>
+        </div>
+        <h1 class="header__title">Wordle</h1>
+        <div class="header__icon-container__2">
+          <ion-icon class="header__icon" name="stats-chart-outline"></ion-icon>
+          <ion-icon class="header__icon" name="settings-outline"></ion-icon>
+        </div>
       </div>
-      <h1 class="header__title">Wordle</h1>
-      <div class="header__icon-container__2">
-        <ion-icon class="header__icon" name="stats-chart-outline"></ion-icon>
-        <ion-icon class="header__icon" name="settings-outline"></ion-icon>
-      </div>
-    </div>
-  </header>
+    </header>
 
-  <section class="section">
-    <div class="board">
-      <div class="board__row board__row__1">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
+    <section class="section">
+      <div class="board">
+        <div class="board__row board__row__1">
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
-            <div class="back">
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
           </div>
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
+        <div class="board__row board__row__2 active">
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
-            <div class="back">
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
           </div>
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
+        <div class="board__row board__row__3">
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
-            <div class="back">
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
           </div>
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
+        <div class="board__row board__row__4">
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
-            <div class="back">
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
           </div>
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
+        <div class="board__row board__row__5">
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
-            <div class="back">
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="board__row board__row__6">
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
+            </div>
+          </div>
+          <div class="board__tile__container">
+            <div class="board__tile">
+              <div class="front">
+              </div>
+              <div class="back">
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="board__row board__row__2 active">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+      <div class="keyboard">
+        <div class="keyboard__row">
+          <button class="keyboard__button" value="Q">Q</button>
+          <button class="keyboard__button" value="W">W</button>
+          <button class="keyboard__button" value="E">E</button>
+          <button class="keyboard__button" value="R">R</button>
+          <button class="keyboard__button" value="T">T</button>
+          <button class="keyboard__button" value="Y">Y</button>
+          <button class="keyboard__button" value="U">U</button>
+          <button class="keyboard__button" value="I">I</button>
+          <button class="keyboard__button" value="O">O</button>
+          <button class="keyboard__button" value="P">P</button>
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="keyboard__row">
+          <button class="keyboard__button" value="A">A</button>
+          <button class="keyboard__button" value="S">S</button>
+          <button class="keyboard__button" value="D">D</button>
+          <button class="keyboard__button" value="F">F</button>
+          <button class="keyboard__button" value="G">G</button>
+          <button class="keyboard__button" value="H">H</button>
+          <button class="keyboard__button" value="J">J</button>
+          <button class="keyboard__button" value="K">K</button>
+          <button class="keyboard__button" value="L">L</button>
         </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
+        <div class="keyboard__row">
+          <button class="keyboard__button keyboard__button--enter" value="Enter">Enter</button>
+          <button class="keyboard__button" value="Z">Z</button>
+          <button class="keyboard__button" value="X">X</button>
+          <button class="keyboard__button" value="C">C</button>
+          <button class="keyboard__button" value="V">V</button>
+          <button class="keyboard__button" value="B">B</button>
+          <button class="keyboard__button" value="N">N</button>
+          <button class="keyboard__button" value="M">M</button>
+          <button class="keyboard__button keyboard__button--backspace" value="Backspace">
+            <ion-icon class="backspace__icon" name="backspace-outline"></ion-icon>
+          </button>
         </div>
       </div>
-      <div class="board__row board__row__3">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
+    </section>
+
+    <section class="introduction-modal__container">
+      <div class="introduction-modal">
       </div>
-      <div class="board__row board__row__4">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="board__row board__row__5">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="board__row board__row__6">
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-        <div class="board__tile__container">
-          <div class="board__tile">
-            <div class="front">
-            </div>
-            <div class="back">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="keyboard">
-      <div class="keyboard__row">
-        <button class="keyboard__button" value="Q">Q</button>
-        <button class="keyboard__button" value="W">W</button>
-        <button class="keyboard__button" value="E">E</button>
-        <button class="keyboard__button" value="R">R</button>
-        <button class="keyboard__button" value="T">T</button>
-        <button class="keyboard__button" value="Y">Y</button>
-        <button class="keyboard__button" value="U">U</button>
-        <button class="keyboard__button" value="I">I</button>
-        <button class="keyboard__button" value="O">O</button>
-        <button class="keyboard__button" value="P">P</button>
-      </div>
-      <div class="keyboard__row">
-        <button class="keyboard__button" value="A">A</button>
-        <button class="keyboard__button" value="S">S</button>
-        <button class="keyboard__button" value="D">D</button>
-        <button class="keyboard__button" value="F">F</button>
-        <button class="keyboard__button" value="G">G</button>
-        <button class="keyboard__button" value="H">H</button>
-        <button class="keyboard__button" value="J">J</button>
-        <button class="keyboard__button" value="K">K</button>
-        <button class="keyboard__button" value="L">L</button>
-      </div>
-      <div class="keyboard__row">
-        <button class="keyboard__button keyboard__button--enter" value="Enter">Enter</button>
-        <button class="keyboard__button" value="Z">Z</button>
-        <button class="keyboard__button" value="X">X</button>
-        <button class="keyboard__button" value="C">C</button>
-        <button class="keyboard__button" value="V">V</button>
-        <button class="keyboard__button" value="B">B</button>
-        <button class="keyboard__button" value="N">N</button>
-        <button class="keyboard__button" value="M">M</button>
-        <button class="keyboard__button keyboard__button--backspace" value="Backspace">
-          <ion-icon class="backspace__icon" name="backspace-outline"></ion-icon>
-        </button>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
