add local storage for data-persistence

--- a/index.html
+++ b/index.html
@@ -441,20 +441,20 @@
         <h1 class="statistics-modal__title">STATISTICS</h1>
         <div class="statistics-modal__stats-container">
           <div class="statistics-modal__stat-box">
-            <p class="statistics-modal__stat">0</p>
+            <p class="statistics-modal__stat statistics-modal__games-played">0</p>
             <p class="statistics-modal__stat-description">Played</p>
           </div>
           <div class="statistics-modal__stat-box">
-            <p class="statistics-modal__stat">0</p>
+            <p class="statistics-modal__stat statistics-modal__percent-games-won">0</p>
             <p class="statistics-modal__stat-description">Win %</p>
           </div>
           <div class="statistics-modal__stat-box">
-            <p class="statistics-modal__stat">0</p>
+            <p class="statistics-modal__stat statistics-modal__current-streak">0</p>
             <p class="statistics-modal__stat-description">Current</p>
             <p class="statistics-modal__stat-description">Streak</p>
           </div>
           <div class="statistics-modal__stat-box">
-            <p class="statistics-modal__stat">0</p>
+            <p class="statistics-modal__stat statistics-modal__max-streak">0</p>
             <p class="statistics-modal__stat-description">Max</p>
             <p class="statistics-modal__stat-description">Streak</p>
           </div>
