add data persistence for tiles

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-        <div class="board__row board__row__2 active">
+        <div class="board__row board__row__2">
           <div class="board__tile__container">
             <div class="board__tile">
               <div class="front">
