add data persistence for answer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header__icon-container__1">
           <ion-icon class="header__icon header__rules-icon" name="help-circle-outline"></ion-icon>
         </div>
-        <h1 class="header__title">Werdle 4 Nerdles</h1>
+        <h1 class="header__title">Wordle</h1>
         <div class="header__icon-container__2">
           <ion-icon class="header__icon header__statistics-icon" name="stats-chart-outline"></ion-icon>
           <ion-icon class="header__icon header__settings-icon" name="settings-outline"></ion-icon>
