refactor code structure

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="section">
       <div class="board">
         <div class="message-container">
-          <p class="message success__message hidden">BINGO!</p>
+          <p class="message success__message hidden">Good Job Nerdle</p>
           <p class="message error__message--short hidden">Too Short</p>
           <p class="message error__message--invalid hidden">Not A Valid Word</p>
         </div>
