--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
     <section class="section">
       <div class="board">
         <div class="message-container">
-          <p class="message success__message hidden">Good Job Nerdle</p>
-          <p class="message error__message--short hidden">Too Short</p>
-          <p class="message error__message--invalid hidden">Not A Valid Word</p>
+          <div class="message success__message hidden">
+            <p class="message-text">Good Job Nerdle</p>
+          </div>
+          <div class="message error__message--short hidden">
+            <p class="message-text">Not Enough Letters</p>
+          </div>
+          <div class="message error__message--invalid hidden">
+            <p class="message-text">Not In Word List</p>
+          </div>
         </div>
         <div class="board__row board__row__1">
           <div class="board__tile__container">
