add countdown timer

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       </div>
     </section>
 
-    <section class="statistics-modal__container invisible">
+    <section class="statistics-modal__container">
       <div class="statistics-modal">
         <div class="statistics-modal__close-icon__container">
           <ion-icon class="statistics-modal__close-icon" name="close-outline"></ion-icon>
@@ -466,6 +466,14 @@
           </div>
         </div>
         <h2 class="statistics-modal__title">GUESS DISTRIBUTION</h2>
+        <div></div>
+        <div class="statistics-modal__share-and-timer-container">
+          <div class="statistics-modal__timer">
+            <span class="hours">24</span><span>:</span><span class="minutes">00</span><span>:</span><span
+              class="seconds">00</span>
+          </div>
+          <div class="statistics-modal__share"></div>
+        </div>
       </div>
     </section>
   </div>
