--- a/index.html
+++ b/index.html
@@ -469,8 +469,9 @@
         <div></div>
         <div class="statistics-modal__share-and-timer-container">
           <div class="statistics-modal__timer">
-            <span class="hours">24</span><span>:</span><span class="minutes">00</span><span>:</span><span
-              class="seconds">00</span>
+            <span class="time"></span>
+            <!-- <span class="hours"></span><span>:</span><span class="minutes"></span><span>:</span><span
+              class="seconds"></span> -->
           </div>
           <div class="statistics-modal__share"></div>
         </div>
