--- a/index.html
+++ b/index.html
@@ -468,10 +468,13 @@
         <h2 class="statistics-modal__title">GUESS DISTRIBUTION</h2>
         <div></div>
         <div class="statistics-modal__share-and-timer-container">
-          <div class="statistics-modal__timer">
-            <span class="time"></span>
-            <!-- <span class="hours"></span><span>:</span><span class="minutes"></span><span>:</span><span
-              class="seconds"></span> -->
+          <div class="statistics-modal__timer-container">
+            <p class="statistics-modal__next-werdle">NEXT WERDLE</p>
+            <div class="statistics-modal__time"></div>
+          </div>
+          <div class="statistics-modal__button-container">
+            <button class="statistics-modal__button">SHARE<ion-icon class="statistics-modal__button__icon"
+                name="share-social-outline"></ion-icon></button>
           </div>
           <div class="statistics-modal__share"></div>
         </div>
