--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
       </div>
     </section>
 
-    <section class="statistics-modal__container">
+    <section class="statistics-modal__container invisible">
       <div class="statistics-modal">
         <div class="statistics-modal__close-icon__container">
           <ion-icon class="statistics-modal__close-icon" name="close-outline"></ion-icon>
@@ -466,7 +466,44 @@
           </div>
         </div>
         <h2 class="statistics-modal__title">GUESS DISTRIBUTION</h2>
-        <div></div>
+        <div class="statistics-modal__guess-distribution-container">
+          <div class="stastistics-modal__guess-distribution">
+            <p class="statistics-modal__guess-distribution__number">1</p>
+            <div class="statistics-modal__guess-distribution__bar">
+              <p class="statistics-modal__guess-distribution__bar__number">0</p>
+            </div>
+          </div>
+          <div class="stastistics-modal__guess-distribution">
+            <p class="statistics-modal__guess-distribution__number">2</p>
+            <div class="statistics-modal__guess-distribution__bar">
+              <p class="statistics-modal__guess-distribution__bar__number">0</p>
+            </div>
+          </div>
+          <div class="stastistics-modal__guess-distribution">
+            <p class="statistics-modal__guess-distribution__number">3</p>
+            <div class="statistics-modal__guess-distribution__bar">
+              <p class="statistics-modal__guess-distribution__bar__number">0</p>
+            </div>
+          </div>
+          <div class="stastistics-modal__guess-distribution">
+            <p class="statistics-modal__guess-distribution__number">4</p>
+            <div class="statistics-modal__guess-distribution__bar">
+              <p class="statistics-modal__guess-distribution__bar__number">0</p>
+            </div>
+          </div>
+          <div class="stastistics-modal__guess-distribution">
+            <p class="statistics-modal__guess-distribution__number">5</p>
+            <div class="statistics-modal__guess-distribution__bar">
+              <p class="statistics-modal__guess-distribution__bar__number">0</p>
+            </div>
+          </div>
+          <div class="stastistics-modal__guess-distribution">
+            <p class="statistics-modal__guess-distribution__number">6</p>
+            <div class="statistics-modal__guess-distribution__bar">
+              <p class="statistics-modal__guess-distribution__bar__number">0</p>
+            </div>
+          </div>
+        </div>
         <div class="statistics-modal__share-and-timer-container">
           <div class="statistics-modal__timer-container">
             <p class="statistics-modal__next-werdle">NEXT WERDLE</p>
