make bar graph responsive to player score statistics

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <p class="example__text">You know what this means you <strong>NERDLE</strong></p>
           </div>
         </div>
-        <p class="rules__modal__footer">New WERLDE every hour for NERDLES</p>
+        <p class="rules__modal__footer">New WERDLE every day for NERDLES</p>
       </div>
     </section>
 
