add clipboard copy feature

--- a/index.html
+++ b/index.html
@@ -509,11 +509,11 @@
             <p class="statistics-modal__next-werdle">NEXT WERDLE</p>
             <div class="statistics-modal__time"></div>
           </div>
-          <div class="statistics-modal__button-container">
-            <button class="statistics-modal__button">SHARE<ion-icon class="statistics-modal__button__icon"
+          <div class="statistics-modal__share-button-container">
+            <button class="statistics-modal__share-button">SHARE<ion-icon class="statistics-modal__share-button__icon"
                 name="share-social-outline"></ion-icon></button>
           </div>
-          <div class="statistics-modal__share"></div>
+          <textarea class="statistics-modal__share hidden"></textarea>
         </div>
       </div>
     </section>
